--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -1,7 +1,7 @@
-name: Run RSpec tests
+name: Run MiniTest
 on: [push]
 jobs:
-  run-rspec-tests:
+  run-minitest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
